--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "This is amazone clone",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "Udayaditya Singh",
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.18.3",
-    "ejs": "^2.6.1",
-    "ejs-mate": "^3.0.0",
-    "express": "^4.16.4",
-    "mongoose": "^5.3.10",
-    "morgan": "^1.9.1"
+    "body-parser": "^1.14.2",
+    "connect-mongo": "^1.1.0",
+    "cookie-parser": "^1.4.0",
+    "ejs": "^2.3.4",
+    "ejs-mate": "^2.3.0",
+    "express": "^4.13.3",
+    "express-flash": "0.0.2",
+    "express-session": "^1.12.1",
+    "mongoose": "^4.3.4",
+    "morgan": "^1.6.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
