--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "debug": "nodemon --inspect-brk server.js"
   },
   "author": "Udayaditya Singh",
   "license": "ISC",
   "dependencies": {
+    "async": "^1.5.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.2",
     "connect-mongo": "^1.1.0",
@@ -19,6 +21,8 @@
     "express": "^4.13.3",
     "express-flash": "0.0.2",
     "express-session": "^1.12.1",
+    "faker": "^3.0.1",
+    "mongoosastic": "^3.6.0",
     "mongoose": "^4.3.4",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
